[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redberry-webkit"
version = "0.1.2"
description = "Shared, project-agnostic building blocks for FastAPI + NiceGUI apps: env resolution, dashboard auth, hot-reloadable config, logging redaction, timezone handling, credential-expiry watching."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
    "pyjwt>=2.8.0",
    "tzdata>=2024.1",
]

[tool.hatch.build.targets.wheel]
packages = ["redberry_webkit"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
